k8s-preprod/infra/kube-prometheus/grafana-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: grafana
  namespace: monitoring
  labels:
    app: grafana
  annotations:
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
spec:
  tls:
  - hosts:
    - metrics.chime-live-cluster.phl.io
    secretName: tls-secret
  rules:
  - host: metrics.chime-live-cluster.phl.io
    http:
      paths:
      - path: /
        backend:
          serviceName: grafana
          servicePort: 3000
